--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@
 name: CI
 
 on:
-  push:
-    branches: [ "main", "dev" ]
+  # push:
+  #   branches: [ "feature/*", "release/*", "fix/*", "chore/*", "docs/*" ]
   pull_request:
     branches: [ "main", "dev" ]
 
