feat: add device list

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "i18next": "21.9.1",
     "i18next-browser-languagedetector": "6.1.5",
     "i18next-http-backend": "1.4.1",
+    "mantine-datatable": "^1.7.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
