--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,7 @@
   "rules": {
     "prettier/prettier": ["warn", {}, {"usePrettierrc": true}],
     "react/react-in-jsx-scope": "off",
-    "camelcase": "error",
+    "camelcase": "warn",
     "spaced-comment": ["error", "always", {"markers": ["/"]}],
     "quotes": ["warn", "single"],
     "no-duplicate-imports": "error",
